--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,6 @@
 <div class="page__footer-copyright">
   &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.
   Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp;
-  <a href="https://github.com/academicpages/academicpages.github.io" rel="nofollow">AcademicPages</a> (Minimal Mistakes theme).<br />
+  <a href="https://github.com/academicpages/academicpages.github.io" rel="nofollow">AcademicPages</a> <br />
   Site last updated {{ "now" | date: '%Y-%m-%d' }}.
 </div>
