--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,9 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+.page__content p {
+  font-size: 0.95rem;
+  line-height: 1.6;
+}
+
